# zero-touch

./: .gitignore  README.md  pyproject.toml
OOG/: departments.py  dept_to_repos.py  epics.py  oog_init.py  repos.py  skills_to_user.py  stories.py  teams_overlap.py  user_to_epics.py  users.py
configs/: agents.yaml  database_cfg.yaml  instructions.yaml  queries.yaml
dev/: chromadb_queries.py  create_duckdb.py  github_commits.py  github_identities.py  identity_inference.py  identity_resolution.py  jira_issues.py  jira_users.py  resolve_commit_identities.py  sql_queries.py
edns_mcp/: config.yaml
exploration/: all_interactions.py  gh_prs.py  gh_user_inference_info.py  issue_info_from_comms_prs.py  jira_profiles.py  jira_story_person.py  person_information.py  repo_label_inference.py  test_inference.py
frictionless/: config.py  connect_data_sources.py  data_source_definition.py  setup_customer.py
live_pulls/: gh_users.py  live_gh_commits.py  live_gh_prs.py  live_gh_users.py  live_jira_issues.py  pr_jira_users.py  unique_ids.py  update_matched_users.py
models/: __init__.py  aggregator_models.py  identity_models.py  inference_models.py  knowledgebase_models.py  response_models.py  schema_models.py  sql_constructor_models.py  sql_models.py
rw/: aggregate_person_roles.py  infer_role_per_link.py  stage_person_attributes.py
scripts/: KG_setup.py  chromadb_setup.py  create_duckdb.py  duckdb_setup.py  paths.py  save_inference_input.py  save_table.py
services/: connection_manager.py  create_engine.py  snowflake_download.py
src/: agent_builder.py  issue_inference.py  (+12 more)
(+106 files in other folders)
