[project]
name = "zero-touch"
version = "0.1.0"
description = "Frictionless, zero-touch onboarding experience."
authors = [{ name = "Peter Breslin", email = "peter.breslin@experienceflow.ai" }]
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.5",
    "arango>=0.2.1",
    "dotenv>=0.9.9",
    "openai>=1.77.0",
    "snowflake>=1.4.0",
]

[tool.uv]

